fixed spacing within section

--- a/lesson09/styles/prophets.css
+++ b/lesson09/styles/prophets.css
@@ -5,11 +5,13 @@
 }
 
 #cards section{
+    max-width: fit-content;
+    margin: .6rem;
+    padding: 35px;
     border-style: solid; 
     border-width: 3.8px; 
     border-radius: 5rem;
-    padding: 50px;
-    margin: 1rem;    
+    
 }
 
 footer{
